<resources>
    <string name="app_name">Muzic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="song">Song</string>
    <string name="setting">Setting</string>
    <string name="search_hint">Search album song</string>
    <string name="view_all">View All</string>

    <string name="hot">Hot Recommended</string>
    <string name="playlist">Playlist</string>
    <string name="recent_play">Recent played</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>

    <string name="themes">Themes</string>
    <string name="ringtone_cutter">Ringtone Cutter</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="equaliser">Equaliser</string>
    <string name="driver_mode">Driver Mode</string>
    <string name="hidden_folder">Hidden Folders</string>
    <string name="scan_media">Scan Media</string>

    <string name="close_des">Close</string>
    <string name="open_des">Open</string>

    <string name="display">Display</string>
    <string name="audio">Audio</string>
    <string name="headset">Headset</string>
    <string name="lock_screen">Lock screen</string>
    <string name="advanced">Advanced</string>
    <string name="other">Other</string>
    <string name="empty_data">Please allow first time permission</string>

    <string name="my_playlists">My Playlists</string>

    <string name="now_playing">Now Playing</string>
    <string name="music_control_playlist">Playlist</string>
    <string name="music_control_shuffle">Shuffle</string>
    <string name="music_control_repeat">Repeat</string>
    <string name="music_control_eq">EQ</string>
    <string name="music_control_favourites">Favourites</string>

    <string name="timer">%1$s | %2$s</string>
    <string name="album">Album - %1$s</string>
    <string name="album_number">%1$d albums</string>

    <string name="genres_classical">Classical</string>
    <string name="genres_pop">Pop</string>
    <string name="genres_hip_hop">Hip - Hop</string>
    <string name="genres_rock">Rock</string>
    <string name="genres_soul_and_r_and_b">Soul and R&amp;B</string>
    <string name="genres_instrumental">Instrumental</string>
    <string name="genres_jazz">Jazz</string>
    <string name="genres_country_music">Country Music</string>
    <string name="song_number">%1$d songs</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="album_detail">Album Detail</string>
    <string name="billie_jean">Billie Jean</string>
    <string name="_4_13">4:13</string>
    <string name="artist_detail">Artist Detail</string>
    <string name="_2019">2019</string>
    <string name="top_album">Top Albums</string>
    <string name="top_songs">Top songs</string>
    <string name="history">History</string>
    <string name="michael_jackson">Michael Jackson</string>
    <string name="beyonce">Beyonce</string>
    <string name="bebe_rexha">Bebe Rexha</string>
    <string name="maroon_5">Maroon 5</string>
    <string name="queen">Queens</string>
    <string name="yani">Yani</string>

</resources>