<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_theme_color">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cst_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontal_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <ImageView
                android:id="@+id/iv_song_thumbnail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_album_default"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/vertical_2"
                app:layout_constraintStart_toStartOf="@id/vertical_1"
                app:layout_constraintTop_toTopOf="@id/horizontal_1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@id/iv_song_thumbnail">

                <RelativeLayout
                    android:id="@+id/rlt_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_bg_play_song_detail"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_play"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        app:srcCompat="@drawable/ic_play_triangle" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_toEndOf="@id/iv_play"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/play"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rlt_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="4dp"
                    android:layout_toEndOf="@id/rlt_play"
                    android:background="@drawable/bg_button_album_detail"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_share"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        app:srcCompat="@drawable/ic_share" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="6dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_toEndOf="@id/iv_share"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/share"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rlt_favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="4dp"
                    android:layout_toEndOf="@id/rlt_share"
                    android:background="@drawable/bg_button_album_detail"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_favourite"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        app:srcCompat="@drawable/ic_heart" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_favourite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="6dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_toEndOf="@id/iv_favourite"
                        android:fontFamily="@font/segoe_ui"
                        android:text="@string/add_to_favourite"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_songs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cst_summary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
